# echo360-downloader

./: .copier-answers.yml  .gitignore  .mega-linter.yml  .treefmt.toml  CHANGELOG.md  LICENCE.txt  README.md  batch-example.yaml  cog.toml  echo360.py  example-config.yaml  package.json  pyproject.toml
.github/workflows/: publish.yml
src/echo360_downloader/: __init__.py  __main__.py  auth.py  batch.py  capture.py  cli.py  compress.py  download.py  scraper.py  selection.py  session.py  streams.py  ui.py  utils.py
