[project]
name = "echo360-downloader"
version = "0.1.0"
description = "Automated Echo360 lecture downloader using Playwright and ffmpeg"
authors = [{ name = "MRDGH2821" }]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50",
]

[project.scripts]
echo360-dl = "echo360_downloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo360_downloader"]
